[gd_scene load_steps=18 format=3 uid="uid://qrf5v835d777"]

[ext_resource type="Script" path="res://menus/splash_screen.gd" id="1_37y87"]
[ext_resource type="Texture2D" uid="uid://dds5fe518r8ej" path="res://assets/art/menus/never_wolf_splash.png" id="2_w6qng"]
[ext_resource type="Texture2D" uid="uid://bhq2pym2gaxw4" path="res://assets/art/menus/wolf_never_splash.png" id="3_pa4x2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jrbtx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d20my"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dk28v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aygxa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_38lec"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ml0b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1brx8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sygv7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hflkn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q3a2l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_snuas"]

[sub_resource type="Animation" id="Animation_fisoq"]
resource_name = "animate"
length = 4.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wolf_splash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_bmkj3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wolf_splash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wvtre"]
_data = {
"RESET": SubResource("Animation_bmkj3"),
"animate": SubResource("Animation_fisoq")
}

[node name="splash_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_37y87")

[node name="timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="never_splash" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_w6qng")

[node name="easter_egg_button" type="Button" parent="never_splash"]
layout_mode = 0
offset_left = 728.0
offset_top = 256.0
offset_right = 1176.0
offset_bottom = 704.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_jrbtx")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_d20my")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dk28v")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_aygxa")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_38lec")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_2ml0b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1brx8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_sygv7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hflkn")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_q3a2l")
theme_override_styles/normal = SubResource("StyleBoxEmpty_snuas")

[node name="wolf_splash" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_pa4x2")

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wvtre")
}
autoplay = "animate"

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="never_splash/easter_egg_button" to="." method="_on_easter_egg_button_pressed"]
